// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalModal when content exists, dangerouslySetInnerHTML should work 1`] = `
<GlobalModal
  on={
    Object {
      "modal": undefined,
    }
  }
  type="modal"
>
  <div
    className="GlobalModal"
  >
    <Modal
      cancelButtonDisabled={false}
      confirmLoading={false}
      destroyOnClose={true}
      footer={null}
      forceRender={true}
      maskTransitionName="fade"
      okButtonDisabled={false}
      okType="primary"
      onCancel={[Function]}
      style={
        Object {
          "top": 65,
        }
      }
      title=""
      transitionName="zoom"
      visible={false}
      width={520}
    >
      <DialogWrap
        cancelButtonDisabled={false}
        closeIcon={
          <span
            className="ant-modal-close-x"
          >
            <Icon
              className="ant-modal-close-icon"
              type="close"
            />
          </span>
        }
        confirmLoading={false}
        destroyOnClose={true}
        footer={null}
        forceRender={true}
        maskTransitionName="fade"
        okButtonDisabled={false}
        okType="primary"
        onCancel={[Function]}
        onClose={[Function]}
        prefixCls="ant-modal"
        style={
          Object {
            "top": 65,
          }
        }
        title=""
        transitionName="zoom"
        visible={false}
        width={520}
        wrapClassName=""
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div>
                  <div
                    class="ant-modal-wrap "
                    role="dialog"
                    style=""
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal zoom-enter"
                      role="document"
                      style="top: 65px; width: 100%;"
                    >
                      <div
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      >
                        sentinelStart
                      </div>
                      <div
                        class="ant-modal-content"
                      >
                        <button
                          aria-label="Close"
                          class="ant-modal-close"
                        >
                          <span
                            class="ant-modal-close-x"
                          >
                            <i
                              class="anticon anticon-close ant-modal-close-icon"
                            >
                              <svg
                                aria-hidden="true"
                                class=""
                                data-icon="close"
                                fill="currentColor"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                                />
                              </svg>
                            </i>
                          </span>
                        </button>
                        <div
                          class="ant-modal-body"
                        >
                          <div
                            class="Content"
                          >
                            <div
                              style="width: 100%; height: 100%;"
                            >
                              <div>
                                test
                              </div>
                            </div>
                            <div />
                          </div>
                        </div>
                      </div>
                      <div
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      >
                        sentinelEnd
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              cancelButtonDisabled={false}
              className=""
              closable={true}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <Icon
                    className="ant-modal-close-icon"
                    type="close"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={true}
              footer={null}
              forceRender={true}
              key="dialog"
              keyboard={true}
              mask={true}
              maskClosable={true}
              maskTransitionName="fade"
              okButtonDisabled={false}
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              style={
                Object {
                  "top": 65,
                }
              }
              title=""
              transitionName="zoom"
              visible={false}
              width={520}
              wrapClassName=""
            >
              <div>
                <Animate
                  animation={Object {}}
                  component=""
                  componentProps={Object {}}
                  key="mask"
                  onAppear={[Function]}
                  onEnd={[Function]}
                  onEnter={[Function]}
                  onLeave={[Function]}
                  showProp="visible"
                  transitionAppear={true}
                  transitionEnter={true}
                  transitionLeave={true}
                  transitionName="fade"
                >
                  <AnimateChild
                    animation={Object {}}
                    key="mask"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="fade"
                  >
                    <LazyRenderBox
                      className="ant-modal-mask"
                      hiddenClassName="ant-modal-mask-hidden"
                      key="mask"
                      style={Object {}}
                      visible={false}
                    >
                      <div
                        className="ant-modal-mask ant-modal-mask-hidden"
                        style={Object {}}
                      />
                    </LazyRenderBox>
                  </AnimateChild>
                </Animate>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap "
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={Object {}}
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="zoom"
                  />
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </DialogWrap>
    </Modal>
  </div>
</GlobalModal>
`;

exports[`GlobalModal when content exists, dangerouslySetInnerHTML should work 2`] = `
<GlobalModal
  on={
    Object {
      "modal": undefined,
    }
  }
  type="modal"
>
  <div
    className="GlobalModal"
  >
    <Modal
      cancelButtonDisabled={false}
      confirmLoading={false}
      destroyOnClose={true}
      footer={null}
      forceRender={true}
      maskTransitionName="fade"
      okButtonDisabled={false}
      okType="primary"
      onCancel={[Function]}
      style={
        Object {
          "top": 65,
        }
      }
      title=""
      transitionName="zoom"
      visible={false}
      width={520}
    >
      <DialogWrap
        cancelButtonDisabled={false}
        closeIcon={
          <span
            className="ant-modal-close-x"
          >
            <Icon
              className="ant-modal-close-icon"
              type="close"
            />
          </span>
        }
        confirmLoading={false}
        destroyOnClose={true}
        footer={null}
        forceRender={true}
        maskTransitionName="fade"
        okButtonDisabled={false}
        okType="primary"
        onCancel={[Function]}
        onClose={[Function]}
        prefixCls="ant-modal"
        style={
          Object {
            "top": 65,
          }
        }
        title=""
        transitionName="zoom"
        visible={false}
        width={520}
        wrapClassName=""
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div>
                  <div
                    class="ant-modal-wrap "
                    role="dialog"
                    style=""
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal zoom-enter"
                      role="document"
                      style="top: 65px; width: 100%;"
                    >
                      <div
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      >
                        sentinelStart
                      </div>
                      <div
                        class="ant-modal-content"
                      >
                        <button
                          aria-label="Close"
                          class="ant-modal-close"
                        >
                          <span
                            class="ant-modal-close-x"
                          >
                            <i
                              class="anticon anticon-close ant-modal-close-icon"
                            >
                              <svg
                                aria-hidden="true"
                                class=""
                                data-icon="close"
                                fill="currentColor"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                                />
                              </svg>
                            </i>
                          </span>
                        </button>
                        <div
                          class="ant-modal-body"
                        >
                          <div
                            class="Content"
                          >
                            <div
                              style="width: 100%; height: 100%;"
                            >
                              <div>
                                test
                              </div>
                            </div>
                            <div />
                          </div>
                        </div>
                      </div>
                      <div
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      >
                        sentinelEnd
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              cancelButtonDisabled={false}
              className=""
              closable={true}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <Icon
                    className="ant-modal-close-icon"
                    type="close"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={true}
              footer={null}
              forceRender={true}
              key="dialog"
              keyboard={true}
              mask={true}
              maskClosable={true}
              maskTransitionName="fade"
              okButtonDisabled={false}
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              style={
                Object {
                  "top": 65,
                }
              }
              title=""
              transitionName="zoom"
              visible={false}
              width={520}
              wrapClassName=""
            >
              <div>
                <Animate
                  animation={Object {}}
                  component=""
                  componentProps={Object {}}
                  key="mask"
                  onAppear={[Function]}
                  onEnd={[Function]}
                  onEnter={[Function]}
                  onLeave={[Function]}
                  showProp="visible"
                  transitionAppear={true}
                  transitionEnter={true}
                  transitionLeave={true}
                  transitionName="fade"
                >
                  <AnimateChild
                    animation={Object {}}
                    key="mask"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="fade"
                  >
                    <LazyRenderBox
                      className="ant-modal-mask"
                      hiddenClassName="ant-modal-mask-hidden"
                      key="mask"
                      style={Object {}}
                      visible={false}
                    >
                      <div
                        className="ant-modal-mask ant-modal-mask-hidden"
                        style={Object {}}
                      />
                    </LazyRenderBox>
                  </AnimateChild>
                </Animate>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap "
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={Object {}}
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="zoom"
                  />
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </DialogWrap>
    </Modal>
  </div>
</GlobalModal>
`;

exports[`GlobalModal when visible is true, Modal should work 1`] = `
<GlobalModal
  on={
    Object {
      "modal": undefined,
    }
  }
  type="modal"
>
  <div
    className="GlobalModal"
  >
    <Modal
      cancelButtonDisabled={false}
      confirmLoading={false}
      destroyOnClose={true}
      footer={null}
      forceRender={true}
      maskTransitionName="fade"
      okButtonDisabled={false}
      okType="primary"
      onCancel={[Function]}
      style={
        Object {
          "top": 65,
        }
      }
      title=""
      transitionName="zoom"
      visible={false}
      width={520}
    >
      <DialogWrap
        cancelButtonDisabled={false}
        closeIcon={
          <span
            className="ant-modal-close-x"
          >
            <Icon
              className="ant-modal-close-icon"
              type="close"
            />
          </span>
        }
        confirmLoading={false}
        destroyOnClose={true}
        footer={null}
        forceRender={true}
        maskTransitionName="fade"
        okButtonDisabled={false}
        okType="primary"
        onCancel={[Function]}
        onClose={[Function]}
        prefixCls="ant-modal"
        style={
          Object {
            "top": 65,
          }
        }
        title=""
        transitionName="zoom"
        visible={false}
        width={520}
        wrapClassName=""
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div>
                  <div
                    class="ant-modal-wrap "
                    role="dialog"
                    style=""
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal zoom-enter"
                      role="document"
                      style="top: 65px; width: 100%;"
                    >
                      <div
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      >
                        sentinelStart
                      </div>
                      <div
                        class="ant-modal-content"
                      >
                        <button
                          aria-label="Close"
                          class="ant-modal-close"
                        >
                          <span
                            class="ant-modal-close-x"
                          >
                            <i
                              class="anticon anticon-close ant-modal-close-icon"
                            >
                              <svg
                                aria-hidden="true"
                                class=""
                                data-icon="close"
                                fill="currentColor"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                                />
                              </svg>
                            </i>
                          </span>
                        </button>
                        <div
                          class="ant-modal-body"
                        >
                          <div
                            class="Content"
                          >
                            <div />
                          </div>
                        </div>
                      </div>
                      <div
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      >
                        sentinelEnd
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              cancelButtonDisabled={false}
              className=""
              closable={true}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <Icon
                    className="ant-modal-close-icon"
                    type="close"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={true}
              footer={null}
              forceRender={true}
              key="dialog"
              keyboard={true}
              mask={true}
              maskClosable={true}
              maskTransitionName="fade"
              okButtonDisabled={false}
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              style={
                Object {
                  "top": 65,
                }
              }
              title=""
              transitionName="zoom"
              visible={false}
              width={520}
              wrapClassName=""
            >
              <div>
                <Animate
                  animation={Object {}}
                  component=""
                  componentProps={Object {}}
                  key="mask"
                  onAppear={[Function]}
                  onEnd={[Function]}
                  onEnter={[Function]}
                  onLeave={[Function]}
                  showProp="visible"
                  transitionAppear={true}
                  transitionEnter={true}
                  transitionLeave={true}
                  transitionName="fade"
                >
                  <AnimateChild
                    animation={Object {}}
                    key="mask"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="fade"
                  >
                    <LazyRenderBox
                      className="ant-modal-mask"
                      hiddenClassName="ant-modal-mask-hidden"
                      key="mask"
                      style={Object {}}
                      visible={false}
                    >
                      <div
                        className="ant-modal-mask ant-modal-mask-hidden"
                        style={Object {}}
                      />
                    </LazyRenderBox>
                  </AnimateChild>
                </Animate>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap "
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={Object {}}
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="zoom"
                  />
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </DialogWrap>
    </Modal>
  </div>
</GlobalModal>
`;
